--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -33,11 +33,10 @@ jobs:
             -Dsonar.projectVersion=1.0.0
             -Dsonar.sources=.
             -Dsonar.language=js
-            -Dsonar.projectDescription=Linkedin Post Generator
+            -Dsonar.projectDescription=Linkedin-Post-Generator
             -Dsonar.sourceEncoding=UTF-8
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.login=$SONAR_TOKEN
-            -Dsonar.exclusions=**/node_modules/**,test/*.js
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
